# runscribe

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
packaging/: runscribe_entry.py
src/runscribe/: __init__.py  cli.py  session.py
src/runscribe/record/: __init__.py  capturer.py  persistent_capturer.py  pty_capturer.py  subprocess_capturer.py
src/runscribe/redact/: __init__.py  config.py  rules.py
src/runscribe/run/: __init__.py  params.py  parser.py  runner.py
tests/: test_build.py  test_build_html.py  test_capturer.py  test_persistent_capturer.py  test_pty_capturer.py  test_redact.py  test_redact_config.py  test_run.py  test_session.py
