[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runscribe"
version = "0.1.1"
description = "Turn what you just did in the terminal into a clean, re-runnable runbook — offline, no AI, your history never leaves your machine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hamza Mansoor" }]
keywords = ["runbook", "sop", "terminal", "documentation", "devops", "cli", "automation", "offline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4", "mypy>=1.0"]

[project.scripts]
runscribe = "runscribe.cli:app"

[project.urls]
Homepage = "https://github.com/hamzamansoorch/runscribe"
Repository = "https://github.com/hamzamansoorch/runscribe"
Issues = "https://github.com/hamzamansoorch/runscribe/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/runscribe"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# typer's declarative API intentionally puts Option/Argument calls in defaults.
"src/runscribe/cli.py" = ["B008"]

[tool.mypy]
# Analyse against 3.11 so stdlib `tomllib` resolves; runtime still supports 3.10
# via the tomli backport. CI exercises 3.10 at test time.
python_version = "3.11"
strict = true
files = ["src/runscribe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
